--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -6,6 +6,6 @@ packages:
     schema: "./db/migration"
     engine: "postgresql"
     emit_json_tags: true
-    emit_interface: false
+    emit_interface: true
     emit_prepared_queries: false
     emit_empty_slices: true
