--- a/app.env
+++ b/app.env
@@ -1,5 +1,6 @@
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://root:yilin123@localhost:5432/simple_bank?sslmode=disable
+MIGRATION_URL=file://db/migration
 HTTP_SERVER_ADDRESS=0.0.0.0:8080
 GRPC_SERVER_ADDRESS=0.0.0.0:8081
 TOKEN_SYMMETRIC_KEY=12345678901234567890123456789012
