add logger for http and grpc

--- a/app.env
+++ b/app.env
@@ -1,3 +1,4 @@
+ENVIRONMENT=prod
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://root:yilin123@localhost:5432/simple_bank?sslmode=disable
 MIGRATION_URL=file://db/migration
