--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -1,11 +1,19 @@
-version: "1"
-packages:
-  - name: "db"
-    path: "./db/sqlc"
+version: "2"
+sql:
+  - schema: "./db/migration"
     queries: "./db/query"
-    schema: "./db/migration"
     engine: "postgresql"
-    emit_json_tags: true
-    emit_interface: true
-    emit_prepared_queries: false
-    emit_empty_slices: true
+    gen:
+      go:
+        package: "db"
+        out: "./db/sqlc"
+        sql_package: "pgx/v5"
+        emit_json_tags: true
+        emit_interface: true
+        emit_prepared_queries: false
+        emit_empty_slices: true
+        overrides:
+          - db_type: "timestamptz"
+            go_type: "time.Time"
+          - db_type: "uuid"
+            go_type: "github.com/google/uuid.UUID"
